<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/quranicon1"
        android:title="@string/Quraan" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/sebha"
        android:title="@string/sebha_electronia" />
    <item
        android:id="@+id/navigation_ahadeth"
        android:icon="@drawable/ic_ahadeth_icon"
        android:title="@string/Ahadeth" />
    <item
        android:id="@+id/navigation_Api"
        android:icon="@drawable/microphone"
        android:title="@string/radiochannel" />

    <item
        android:id="@+id/navigation_azkar"
        android:icon="@drawable/prayer"
        android:title="@string/azkar" />

</menu>
